force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/CRMfusionDBR101__Potential_Duplicate__c.object-meta.xml
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <label>DupeBlocker Potential Duplicate</label>
    <nameField>
        <displayFormat>Dupe: {0}</displayFormat>
        <label>Duplicate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Potential Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>