force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Contact_Display_Field__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Contact_Display_Field__c</fullName>
    <description>This field is used internally to generate the &quot;Duplicate Record&quot; field.  It generates display text for a contact including the full name linked to the contact and the account name (if there is one) linked to the account.</description>
    <formula>HYPERLINK( &#39;/&#39; &amp; CRMfusionDBR101__Contact__c, CRMfusionDBR101__Contact__r.FirstName &amp; IF( NOT( ISBLANK( CRMfusionDBR101__Contact__r.FirstName ) ), &#39; &#39;, &#39;&#39; ) &amp; CRMfusionDBR101__Contact__r.LastName, &#39;_self&#39;) &amp; IF( AND( NOT( ISBLANK( CRMfusionDBR101__Contact__r.AccountId ) ), NOT( ISNULL( CRMfusionDBR101__Contact__r.AccountId ) ) ), &#39; at &#39; &amp; HYPERLINK( &#39;/&#39; &amp; CRMfusionDBR101__Contact__r.AccountId, CRMfusionDBR101__Contact__r.Account.Name, &#39;_self&#39; ), &#39;&#39; )</formula>
    <inlineHelpText>The full name and account name of the potential duplicate contact.</inlineHelpText>
    <label>Contact Display Field</label>
    <type>Text</type>
</CustomField>