force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Duplicate_Record__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Duplicate_Record__c</fullName>
    <description>This formula displays text based on the type of object this potential duplicate record is linked to.  It utilized the Contact Display Field, Lead Display Field and Account field as needed.</description>
    <formula>CASE(  CRMfusionDBR101__Object_Type__c, &#39;Account&#39;, HYPERLINK( &#39;/&#39; &amp; CRMfusionDBR101__Account__c, CRMfusionDBR101__Account__r.Name, &#39;_self&#39; ), &#39;Contact&#39;,  CRMfusionDBR101__Contact_Display_Field__c , &#39;Lead&#39;, CRMfusionDBR101__Lead_Display_Field__c, HYPERLINK( &#39;/&#39; &amp;  CRMfusionDBR101__Generic_Object__c, CRMfusionDBR101__Generic_Display_Field__c, &#39;_self&#39; ) )</formula>
    <label>Duplicate Record</label>
    <type>Text</type>
</CustomField>