force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Email__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Email__c</fullName>
    <formula>CASE(  CRMfusionDBR101__Object_Type__c, &#39;Contact&#39;,  CRMfusionDBR101__Contact__r.Email, &#39;Lead&#39;,  CRMfusionDBR101__Lead__r.Email, &#39;&#39; )</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>