force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Object_Type__c</fullName>
    <description>This field displays whether the associated potential duplicate is an Account, Contact or Lead.</description>
    <formula>IF( AND( NOT( ISNULL( CRMfusionDBR101__Account__c ) ), NOT( ISBLANK( CRMfusionDBR101__Account__c ) ) ), &#39;Account&#39;, IF(  AND( NOT( ISNULL( CRMfusionDBR101__Contact__c ) ), NOT( ISBLANK( CRMfusionDBR101__Contact__c ) ) ), &#39;Contact&#39;, IF( AND( NOT( ISNULL( CRMfusionDBR101__Lead__c ) ), NOT( ISBLANK( CRMfusionDBR101__Lead__c ) ) ), &#39;Lead&#39;,  TEXT(CRMfusionDBR101__Scenario_Type__c) ) ) )</formula>
    <inlineHelpText>This field displays whether the associated potential duplicate is an Account, Contact or Lead.</inlineHelpText>
    <label>Object Type</label>
    <type>Text</type>
</CustomField>