force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Phone__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Phone__c</fullName>
    <formula>CASE(  CRMfusionDBR101__Object_Type__c, &#39;Account&#39;,  CRMfusionDBR101__Account__r.Phone, &#39;Contact&#39;,  CRMfusionDBR101__Contact__r.Phone, &#39;Lead&#39;,  CRMfusionDBR101__Lead__r.Phone, &#39;&#39; )</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>